--- a/case/main.Rmd
+++ b/case/main.Rmd
@@ -1,8 +1,6 @@
 ---
-title: "R Notebook"
+title: "Quantitative analysis business case"
 ---
-
-# Quantitative analysis business case
 
 Вы работаете интернет-сервисе по продаже билетов в кино и на концерты. Посетители заходят на сайт сервиса, читают рецензии, смотрят расписание кинотеатров, выбирают понравившийся сеанс и покупают билеты.
 
@@ -173,7 +171,6 @@ mean(TBU_first_6_months_df$TBU_first_6_months)
 
 Первое приближение. Бывают сессии, когда покупка происходит раньше начала сессии.
 
-
 ```{r}
 visits_x_orders_df <- visits_df %>%
   inner_join(orders_df, by = "Uid") %>%
@@ -214,7 +211,6 @@ costs_per_source_df <- costs_df %>%
 
 costs_per_source_df
 ```
-
 
 ### 10. Как окупаются расходы на каждый рекламный канал?
 
@@ -284,9 +280,15 @@ ggplot(data = compare_dd,
 ```
 
 Выводы:
-1. Первый канал. Добиться большей стабильности работы первого канала, например за счет увеличения объемов продаж. Видно, что была попытка увеличения затрат на маркетинг, это привело к хорошему росту прибыли. Нужно увеличить инвестиции до 500 в неделю.
-2. Второй канал. Продолжить развивать второй канал, постараться оптимизировать затраты на маркетинг. Затем снова попробовать увеличить инвестиции в этот канал (видно, что у продаж хороший отклик на рост инвестиций).
-3. Третий канал нужно заморозить. Видно, что была попытка увеличить инвестиции в этот канал, но продажи не выросли.
-4. Четвертый канал. Ситуация частично похожа на второй канал: есть рост продаж при росте затрат на маркетинг, но получить прибыль не получилось. В этом канале нужно временно сокартить затраты и заняться разработкой новой маркетинговой стратегии, основанной на опыте этого канала.
-5. Пятый канал нужно заморозить. Была попытка увеличивать затрты на маркетинг, но прибыль быстро упала после увеличения бюджета.
-6. Девятый и десятый канал не генерируют большого убытка, но при этом добавляют разнообразия в продажи. С этими каналами в будущем нужно провести эксперименты с увеличением бюджета до 250.
+
+1\. Первый канал. Добиться большей стабильности работы первого канала, например за счет увеличения объемов продаж. Видно, что была попытка увеличения затрат на маркетинг, это привело к хорошему росту прибыли. Нужно увеличить инвестиции до 500 в неделю.
+
+2\. Второй канал. Продолжить развивать второй канал, постараться оптимизировать затраты на маркетинг. Затем снова попробовать увеличить инвестиции в этот канал (видно, что у продаж хороший отклик на рост инвестиций).
+
+3\. Третий канал нужно заморозить. Видно, что была попытка увеличить инвестиции в этот канал, но продажи не выросли.
+
+4\. Четвертый канал. Ситуация частично похожа на второй канал: есть рост продаж при росте затрат на маркетинг, но получить прибыль не получилось. В этом канале нужно временно сокартить затраты и заняться разработкой новой маркетинговой стратегии, основанной на опыте этого канала.
+
+5\. Пятый канал нужно заморозить. Была попытка увеличивать затрты на маркетинг, но прибыль быстро упала после увеличения бюджета.
+
+6\. Девятый и десятый канал не генерируют большого убытка, но при этом добавляют разнообразия в продажи. С этими каналами в будущем нужно провести эксперименты с увеличением бюджета до 250.
